tests/valid/type_safety_ready_gap/function_value_call.facet
fn id(x: unrestricted isize) -> unrestricted isize {
    x
}

fn main() -> unrestricted isize {
    let f: unrestricted fn(unrestricted isize) -> unrestricted isize = id in
    (f 1)
}
