tests/invalid/struct/missing_field.facet
struct Pair {
  x: unrestricted isize,
  y: unrestricted bool
}

fn main() -> unrestricted Pair {
  Pair { x = 1 }
}
